// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/CheckboxGroup Defaults play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_s6jvz_5 _fieldset_hasSpacing_s6jvz_11">
    <legend id="legendId-:rh:"
            class="_srOnly_s6jvz_39"
    >
      Velg det som passer deg
    </legend>
    <div class="_legend_s6jvz_15"
         aria-hidden="true"
    >
      Velg det som passer deg
    </div>
    <div class="_contentContainer_s6jvz_32">
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:ri:"
               class="_input_1k24j_17"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:ri:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 ">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:rk:"
               class="_input_1k24j_17"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:rk:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 ">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:rm:"
               class="_input_1k24j_17"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:rm:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 ">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:rg:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/CheckboxGroup LegendWithMarkup smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_s6jvz_5 _fieldset_hasSpacing_s6jvz_11">
    <legend id="legendId-:rp:"
            class="_srOnly_s6jvz_39"
    >
      <h1 class="_heading_1okn6_1 _heading_level3_1okn6_34  ">
        Dette er en Heading i legend
      </h1>
      <p class="_paragraph_32eqi_1 _paragraph_ingress_32eqi_20  ">
        <em>
          Dette er en italic Paragraph med ingress variant i legend
        </em>
      </p>
    </legend>
    <div class="_legend_s6jvz_15"
         aria-hidden="true"
    >
      <h1 class="_heading_1okn6_1 _heading_level3_1okn6_34  ">
        Dette er en Heading i legend
      </h1>
      <p class="_paragraph_32eqi_1 _paragraph_ingress_32eqi_20  ">
        <em>
          Dette er en italic Paragraph med ingress variant i legend
        </em>
      </p>
    </div>
    <div class="_contentContainer_s6jvz_32">
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:rq:"
               class="_input_1k24j_17"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:rq:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 ">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:rs:"
               class="_input_1k24j_17"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:rs:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 ">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:ru:"
               class="_input_1k24j_17"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:ru:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 ">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:ro:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/CheckboxGroup LegendWithMarkupAndRequiredMark smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_s6jvz_5 _fieldset_hasSpacing_s6jvz_11">
    <legend id="legendId-:r11:"
            class="_srOnly_s6jvz_39"
    >
      <h1 class="_heading_1okn6_1 _heading_level3_1okn6_34  ">
        Dette er en Heading i legend
      </h1>
      <p class="_paragraph_32eqi_1 _paragraph_ingress_32eqi_20  ">
        <em>
          Dette er en italic Paragraph med ingress variant i legend
        </em>
      </p>
    </legend>
    <div class="_legend_s6jvz_15 _legendWithMarkup_required_s6jvz_23"
         aria-hidden="true"
    >
      <h1 class="_heading_1okn6_1 _heading_level3_1okn6_34  ">
        Dette er en Heading i legend
      </h1>
      <p class="_paragraph_32eqi_1 _paragraph_ingress_32eqi_20  ">
        <em>
          Dette er en italic Paragraph med ingress variant i legend
        </em>
      </p>
    </div>
    <div class="_contentContainer_s6jvz_32">
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:r12:"
               class="_input_1k24j_17"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r12:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 ">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:r14:"
               class="_input_1k24j_17"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r14:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 ">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:r16:"
               class="_input_1k24j_17"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r16:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 ">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:r10:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/CheckboxGroup WithAttributes play-test 1`] = `
<div data-test-block="true">
  <fieldset id="htmlid"
            data-testid="123ID"
            class="_fieldset_s6jvz_5 _fieldset_hasSpacing_s6jvz_11 dummyClassname"
            lang="nb"
            form="123form"
  >
    <legend id="legendId-:r9:"
            class="_srOnly_s6jvz_39"
    >
      Velg det som passer deg
    </legend>
    <div class="_legend_s6jvz_15"
         aria-hidden="true"
    >
      Velg det som passer deg
    </div>
    <div class="_contentContainer_s6jvz_32">
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:ra:"
               class="_input_1k24j_17"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:ra:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 ">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:rc:"
               class="_input_1k24j_17"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:rc:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 ">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:re:"
               class="_input_1k24j_17"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:re:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 ">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:r8:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/CheckboxGroup WithCustomClassNames play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_s6jvz_5 _fieldset_hasSpacing_s6jvz_11">
    <legend id="legendId-:r3d:"
            class="_srOnly_s6jvz_39"
    >
      Velg det som passer deg
    </legend>
    <div class="_legend_s6jvz_15   _legendNoMarginBottom_s6jvz_28 dummyClassname"
         aria-hidden="true"
    >
      Velg det som passer deg
    </div>
    <button class="_button_g87u5_1 _button_extraSmall_g87u5_29 _button_outlined_g87u5_91 _helpButton_10ldw_27"
            type="button"
            aria-describedby="legendId-:r3d:"
            aria-expanded="false"
    >
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r3e:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r3e:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="_description_10ldw_17   dummyClassname">
      beskrivelse
    </div>
    <div class="_contentContainer_s6jvz_32">
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:r3f:"
               class="_input_1k24j_17"
               type="checkbox"
               aria-describedby="checkboxGroupErrorId-:r3c:"
               aria-invalid="true"
               value
        >
        <label for="checkboxInputId-:r3f:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 _labelCheckbox_error_1k24j_60">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:r3h:"
               class="_input_1k24j_17"
               type="checkbox"
               aria-describedby="checkboxGroupErrorId-:r3c:"
               aria-invalid="true"
               value
        >
        <label for="checkboxInputId-:r3h:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 _labelCheckbox_error_1k24j_60">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:r3j:"
               class="_input_1k24j_17"
               type="checkbox"
               aria-describedby="checkboxGroupErrorId-:r3c:"
               aria-invalid="true"
               value
        >
        <label for="checkboxInputId-:r3j:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 _labelCheckbox_error_1k24j_60">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:r3c:"
           aria-live="assertive"
           aria-atomic="true"
      >
        <div class="_errorMessage_1c261_13 _errorMessage_1e92u_5 dummyClassname">
          <svg class="_systemIcon_6zbcy_2 _systemIcon_small_6zbcy_5 _errorMessageIcon_1c261_24"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
            </path>
          </svg>
          <p class="_errorMessageText_1c261_29">
            Velg minst ett av alternativene
          </p>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/CheckboxGroup WithDescription play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_s6jvz_5 _fieldset_hasSpacing_s6jvz_11">
    <legend id="legendId-:r2s:"
            class="_srOnly_s6jvz_39"
    >
      Velg det som passer deg
    </legend>
    <div class="_legend_s6jvz_15   _legendNoMarginBottom_s6jvz_28"
         aria-hidden="true"
    >
      Velg det som passer deg
    </div>
    <div class="_description_10ldw_17">
      Vi trenger å vite om du har barn.
    </div>
    <div class="_contentContainer_s6jvz_32">
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:r2t:"
               class="_input_1k24j_17"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r2t:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 ">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:r2v:"
               class="_input_1k24j_17"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r2v:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 ">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:r31:"
               class="_input_1k24j_17"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r31:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 ">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:r2r:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/CheckboxGroup WithDisabled play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_s6jvz_5 _fieldset_hasSpacing_s6jvz_11"
            disabled
  >
    <legend id="legendId-:r1h:"
            class="_srOnly_s6jvz_39"
    >
      Velg det som passer deg
    </legend>
    <div class="_legend_s6jvz_15"
         aria-hidden="true"
    >
      Velg det som passer deg
    </div>
    <div class="_contentContainer_s6jvz_32">
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:r1i:"
               class="_input_1k24j_17"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r1i:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 ">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:r1k:"
               class="_input_1k24j_17"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r1k:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 ">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:r1m:"
               class="_input_1k24j_17"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r1m:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 ">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:r1g:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/CheckboxGroup WithDisabledAndChecked smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_s6jvz_5 _fieldset_hasSpacing_s6jvz_11"
            disabled
  >
    <legend id="legendId-:r1p:"
            class="_srOnly_s6jvz_39"
    >
      Velg det som passer deg
    </legend>
    <div class="_legend_s6jvz_15"
         aria-hidden="true"
    >
      Velg det som passer deg
    </div>
    <div class="_contentContainer_s6jvz_32">
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:r1q:"
               class="_input_1k24j_17"
               type="checkbox"
               value
               checked
        >
        <label for="checkboxInputId-:r1q:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 ">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:r1s:"
               class="_input_1k24j_17"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r1s:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 ">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:r1u:"
               class="_input_1k24j_17"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r1u:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 ">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:r1o:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/CheckboxGroup WithError play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_s6jvz_5 _fieldset_hasSpacing_s6jvz_11">
    <legend id="legendId-:r29:"
            class="_srOnly_s6jvz_39"
    >
      Velg det som passer deg
    </legend>
    <div class="_legend_s6jvz_15"
         aria-hidden="true"
    >
      Velg det som passer deg
    </div>
    <div class="_contentContainer_s6jvz_32">
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:r2a:"
               class="_input_1k24j_17"
               type="checkbox"
               aria-describedby="checkboxGroupErrorId-:r28:"
               aria-invalid="true"
               value
        >
        <label for="checkboxInputId-:r2a:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 _labelCheckbox_error_1k24j_60">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:r2c:"
               class="_input_1k24j_17"
               type="checkbox"
               aria-describedby="checkboxGroupErrorId-:r28:"
               aria-invalid="true"
               value
        >
        <label for="checkboxInputId-:r2c:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 _labelCheckbox_error_1k24j_60">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:r2e:"
               class="_input_1k24j_17"
               type="checkbox"
               aria-describedby="checkboxGroupErrorId-:r28:"
               aria-invalid="true"
               value
        >
        <label for="checkboxInputId-:r2e:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 _labelCheckbox_error_1k24j_60">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:r28:"
           aria-live="assertive"
           aria-atomic="true"
      >
        <div class="_errorMessage_1c261_13 _errorMessage_1e92u_5">
          <svg class="_systemIcon_6zbcy_2 _systemIcon_small_6zbcy_5 _errorMessageIcon_1c261_24"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
            </path>
          </svg>
          <p class="_errorMessageText_1c261_29">
            Velg minst ett av alternativene
          </p>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/CheckboxGroup WithHelpToggleEvent smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_s6jvz_5 _fieldset_hasSpacing_s6jvz_11">
    <legend id="legendId-:r34:"
            class="_srOnly_s6jvz_39"
    >
      Velg det som passer deg
    </legend>
    <div class="_legend_s6jvz_15   _legendNoMarginBottom_s6jvz_28"
         aria-hidden="true"
    >
      Velg det som passer deg
    </div>
    <button class="_button_g87u5_1 _button_extraSmall_g87u5_29 _button_outlined_g87u5_91 _helpButton_10ldw_27"
            type="button"
            aria-describedby="legendId-:r34:"
            aria-expanded="false"
    >
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r35:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r35:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="_contentContainer_s6jvz_32">
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:r36:"
               class="_input_1k24j_17"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r36:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 ">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:r38:"
               class="_input_1k24j_17"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r38:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 ">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:r3a:"
               class="_input_1k24j_17"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r3a:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 ">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:r33:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/CheckboxGroup WithHelptext play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_s6jvz_5 _fieldset_hasSpacing_s6jvz_11">
    <legend id="legendId-:r2i:"
            class="_srOnly_s6jvz_39"
    >
      Velg det som passer deg
    </legend>
    <div class="_legend_s6jvz_15   _legendNoMarginBottom_s6jvz_28"
         aria-hidden="true"
    >
      Velg det som passer deg
    </div>
    <button class="_button_g87u5_1 _button_extraSmall_g87u5_29 _button_outlined_g87u5_91 _helpButton_10ldw_27"
            type="button"
            aria-describedby="legendId-:r2i:"
            aria-expanded="true"
    >
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r2j:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r2j:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="_helpBox_10ldw_31">
      <span class="_helpBoxText_10ldw_44">
        Vi trenger å vite om du har barn.
      </span>
      <button class="_button_g87u5_1 _button_small_g87u5_37  _helpBoxCloseButton_10ldw_51"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r2q:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r2q:">
            Lukk
          </title>
          <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
          </path>
        </svg>
      </button>
    </div>
    <div class="_contentContainer_s6jvz_32">
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:r2k:"
               class="_input_1k24j_17"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r2k:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 ">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:r2m:"
               class="_input_1k24j_17"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r2m:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 ">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:r2o:"
               class="_input_1k24j_17"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r2o:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 ">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:r2h:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/CheckboxGroup WithHideLegend play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_s6jvz_5 _fieldset_hasSpacing_s6jvz_11">
    <legend id="legendId-:r19:"
            class="_srOnly_s6jvz_39"
    >
      Velg det som passer deg
    </legend>
    <div class="_legend_s6jvz_15  _srOnly_s6jvz_39"
         aria-hidden="true"
    >
      Velg det som passer deg
    </div>
    <div class="_contentContainer_s6jvz_32 _contentContainerNoMarginTop_s6jvz_35">
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:r1a:"
               class="_input_1k24j_17"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r1a:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 ">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:r1c:"
               class="_input_1k24j_17"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r1c:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 ">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:r1e:"
               class="_input_1k24j_17"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r1e:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 ">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:r18:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/CheckboxGroup WithRef play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_s6jvz_5 _fieldset_hasSpacing_s6jvz_11"
            id="dummyIdForwardedFromRef"
  >
    <legend id="legendId-:r1:"
            class="_srOnly_s6jvz_39"
    >
      Velg det som passer deg
    </legend>
    <div class="_legend_s6jvz_15"
         aria-hidden="true"
    >
      Velg det som passer deg
    </div>
    <div class="_contentContainer_s6jvz_32">
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:r2:"
               class="_input_1k24j_17"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r2:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 ">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:r4:"
               class="_input_1k24j_17"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r4:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 ">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:r6:"
               class="_input_1k24j_17"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r6:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 ">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:r0:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/CheckboxGroup WithRequiredMark smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_s6jvz_5 _fieldset_hasSpacing_s6jvz_11">
    <legend id="legendId-:r21:"
            class="_srOnly_s6jvz_39"
    >
      Velg det som passer deg
    </legend>
    <div class="_legend_s6jvz_15 _legend_required_s6jvz_23"
         aria-hidden="true"
    >
      Velg det som passer deg
    </div>
    <div class="_contentContainer_s6jvz_32">
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:r22:"
               class="_input_1k24j_17"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r22:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 ">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:r24:"
               class="_input_1k24j_17"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r24:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 ">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1k24j_5 _containerSpacingBottom_1k24j_14 ">
        <input id="checkboxInputId-:r26:"
               class="_input_1k24j_17"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r26:"
               class="_label_1k24j_29  "
        >
          <span class="_labelCheckbox_1k24j_40 ">
            <span class="_labelCheckboxCheck_1k24j_50">
            </span>
          </span>
          <span class="_labelContent_1k24j_63 ">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:r20:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;
